# python-checker

./: Containerfile  README.md  action.yml  compose.yml  entrypoint.sh  pyproject.toml
.github/workflows/: publish.yml
